--- a/app/src/main/res/layout-land/fragment_bloque_unidad.xml
+++ b/app/src/main/res/layout-land/fragment_bloque_unidad.xml
@@ -10,90 +10,83 @@
 
         <Button
             android:id="@+id/bt_leccion1"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
             android:background="@drawable/rounded_button"
             android:text="Leccion 1"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/bt_leccion2"
+            app:layout_constraintEnd_toStartOf="@+id/bt_leccion3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.126" />
+            app:layout_constraintVertical_bias="0.14" />
 
         <Button
             android:id="@+id/bt_leccion2"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
             android:background="@drawable/rounded_button"
             android:text="Leccion 2"
-            android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_leccion1"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.126" />
-
-
-        <Button
-            android:id="@+id/bt_leccion3"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/rounded_button"
-            android:text="Leccion 3"
             android:textColor="#FFFFFF"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bt_leccion4"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.469" />
+            app:layout_constraintVertical_bias="0.67" />
+
+
+        <Button
+            android:id="@+id/bt_leccion3"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
+            android:background="@drawable/rounded_button"
+            android:text="Leccion 3"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBaseline_toBaselineOf="@+id/bt_leccion1"
+            app:layout_constraintEnd_toStartOf="@+id/bt_leccion5"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt_leccion1" />
 
 
         <Button
             android:id="@+id/bt_leccion4"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
             android:background="@drawable/rounded_button"
             android:text="Leccion 4"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_leccion3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.469" />
-
-
-        <Button
-            android:id="@+id/bt_leccion5"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@drawable/rounded_button"
-            android:text="Leccion 5"
-            android:textColor="#FFFFFF"
+            app:layout_constraintBaseline_toBaselineOf="@+id/bt_leccion2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/bt_leccion6"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.796" />
+            app:layout_constraintStart_toEndOf="@+id/bt_leccion2"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/bt_leccion5"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
+            android:background="@drawable/rounded_button"
+            android:text="Leccion 5"
+            android:textColor="#FFFFFF"
+            app:layout_constraintBaseline_toBaselineOf="@+id/bt_leccion3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/bt_leccion3" />
 
         <Button
             android:id="@+id/bt_leccion6"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="@dimen/menu_button"
+            android:layout_height="@dimen/menu_button"
             android:background="@drawable/rounded_button"
             android:text="Leccion 6"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBaseline_toBaselineOf="@+id/bt_leccion4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_leccion5"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.796" />
+            app:layout_constraintStart_toEndOf="@+id/bt_leccion4" />
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/toolbar_main_menu"
