--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="afinador_boton_size">75dp</dimen>
     <dimen name="wideMargin">16dp</dimen>
+    <dimen name="small_button">75dp</dimen>
+    <dimen name="menu_button">100dp</dimen>
 </resources>
