Trying to add metronome tool

--- a/app/src/main/res/layout/fragment_metronomo.xml
+++ b/app/src/main/res/layout/fragment_metronomo.xml
@@ -23,11 +23,11 @@
             android:orientation="horizontal">
 
             <Switch
-                android:id="@+id/switch1"
+                android:id="@+id/metronomeSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Play" />
+                android:text="Start" />
 
             <EditText
                 android:id="@+id/etBPM"
