--- a/app/src/main/res/layout/textview.xml
+++ b/app/src/main/res/layout/textview.xml
@@ -3,5 +3,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/tvTest"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="true">
     </TextView>
