--- a/app/src/main/res/layout/fragment_bloque_leccion.xml
+++ b/app/src/main/res/layout/fragment_bloque_leccion.xml
@@ -8,6 +8,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/tvLessonTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Bloque Leccion (Work in Progress)" />
