Fix: acordes y acordes(land)

--- a/app/src/main/res/layout-land/fragment_acordes.xml
+++ b/app/src/main/res/layout-land/fragment_acordes.xml
@@ -27,25 +27,23 @@
                 <ImageView
                     android:id="@+id/imgChord"
                     android:layout_width="235dp"
-                    android:layout_height="173dp"
+                    android:layout_height="160dp"
                     android:layout_marginTop="@dimen/wideMargin"
-                    android:src="@drawable/menor_septima_mayor"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/spChordName" />
+                    app:layout_constraintTop_toBottomOf="@+id/spChordName"  />
 
 
                 <Button
                     android:id="@+id/bt_NotaChord1"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/rounded_button"
                     android:text="1"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName1"
                     app:layout_constraintEnd_toStartOf="@+id/AcordeName1"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgChord" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/AcordeName1"
@@ -65,25 +63,23 @@
                     android:id="@+id/Acorde1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:text="C"
                     android:textSize="30sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/AcordeName1"
-                    app:layout_constraintTop_toBottomOf="@+id/imgChord" />
+                    app:layout_constraintStart_toEndOf="@+id/AcordeName1" />
 
                 <Button
                     android:id="@+id/bt_NotaChord2"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:background="@drawable/rounded_button"
                     android:text="3"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName2"
                     app:layout_constraintEnd_toStartOf="@+id/AcordeName2"
                     app:layout_constraintHorizontal_bias="0.131"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/bt_NotaChord1" />
+                    app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
                     android:id="@+id/AcordeName2"
@@ -103,18 +99,17 @@
                     android:id="@+id/Acorde2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:text="E"
                     android:textSize="30sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/AcordeName2"
-                    app:layout_constraintTop_toBottomOf="@+id/Acorde1" />
+                    app:layout_constraintStart_toEndOf="@+id/AcordeName2" />
 
                 <Button
                     android:id="@+id/bt_NotaChord3"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/rounded_button"
                     android:text="5"
@@ -128,14 +123,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="50dp"
-                    android:layout_marginTop="15dp"
                     android:layout_marginEnd="50dp"
                     android:text="Quinta justa"
                     android:textSize="30sp"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/Acorde3"
                     app:layout_constraintEnd_toStartOf="@+id/Acorde3"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/bt_NotaChord3"
-                    app:layout_constraintTop_toBottomOf="@+id/AcordeName2" />
+                    app:layout_constraintStart_toEndOf="@+id/bt_NotaChord3" />
 
                 <TextView
                     android:id="@+id/Acorde3"
@@ -152,24 +146,25 @@
                 <Button
                     android:id="@+id/button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginTop="50dp"
                     android:background="@color/colorPrimary"
                     android:text="Ascendente"
                     android:textColor="#FFFFFF"
                     app:layout_constraintEnd_toStartOf="@+id/button2"
-                    app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
 
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginTop="50dp"
+                    android:layout_marginBottom="64dp"
                     android:background="@color/colorPrimary"
                     android:text="Descendente"
                     android:textColor="#FFFFFF"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/button3"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toEndOf="@+id/button"
@@ -178,15 +173,14 @@
                 <Button
                     android:id="@+id/button3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="50dp"
+                    android:layout_height="30dp"
                     android:background="@color/colorPrimary"
                     android:text="Armonico"
                     android:textColor="#FFFFFF"
+                    app:layout_constraintBaseline_toBaselineOf="@+id/button2"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
-                    app:layout_constraintStart_toEndOf="@+id/button2"
-                    app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
+                    app:layout_constraintStart_toEndOf="@+id/button2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
