agredada funcionalidad a acordes

--- a/app/src/main/res/layout/fragment_acordes.xml
+++ b/app/src/main/res/layout/fragment_acordes.xml
@@ -26,152 +26,55 @@
             app:layout_constraintTop_toBottomOf="@+id/spChordName" />
 
 
-        <Button
-            android:id="@+id/bt_NotaChord1"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@drawable/rounded_button"
-            android:text="1"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName1"
-            app:layout_constraintEnd_toStartOf="@+id/AcordeName1"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent" />
-
         <TextView
             android:id="@+id/AcordeName1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="100dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="100dp"
-            android:text="Raiz"
+            android:text="Raiz C"
             android:textSize="30sp"
-            app:layout_constraintEnd_toStartOf="@+id/Acorde1"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord1"
-            app:layout_constraintTop_toBottomOf="@+id/imgChord" />
-
-        <TextView
-            android:id="@+id/Acorde1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="C"
-            android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/AcordeName1" />
-
-        <Button
-            android:id="@+id/bt_NotaChord2"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@drawable/rounded_button"
-            android:text="3"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName2"
-            app:layout_constraintEnd_toStartOf="@+id/AcordeName2"
-            app:layout_constraintHorizontal_bias="0.131"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgChord" />
 
         <TextView
             android:id="@+id/AcordeName2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="60dp"
             android:layout_marginTop="15dp"
-            android:layout_marginEnd="50dp"
             android:text="Tercera Mayor"
             android:textSize="30sp"
-            app:layout_constraintEnd_toStartOf="@+id/Acorde2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord2"
-            app:layout_constraintTop_toBottomOf="@+id/AcordeName1" />
-
-        <TextView
-            android:id="@+id/Acorde2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="E"
-            android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/AcordeName2" />
-
-        <Button
-            android:id="@+id/bt_NotaChord3"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/rounded_button"
-            android:text="5"
-            app:layout_constraintEnd_toStartOf="@+id/AcordeName3"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/bt_NotaChord2" />
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName1" />
 
         <TextView
             android:id="@+id/AcordeName3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginEnd="50dp"
+            android:layout_marginTop="15dp"
             android:text="Quinta justa"
             android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/bt_NotaChord3"
-            app:layout_constraintEnd_toStartOf="@+id/Acorde3"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord3" />
-
-        <TextView
-            android:id="@+id/Acorde3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="G"
-            android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName3"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/AcordeName3" />
-
-        <Button
-            android:id="@+id/bt_NotaChord4"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:background="@drawable/rounded_button"
-            android:text="-"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName4"
-            app:layout_constraintEnd_toStartOf="@+id/AcordeName4"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName2" />
 
         <TextView
             android:id="@+id/AcordeName4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="15dp"
             android:text="-----------------"
             android:textSize="30sp"
-            app:layout_constraintEnd_toStartOf="@+id/Acorde4"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/bt_NotaChord4"
-            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
-
-        <TextView
-            android:id="@+id/Acorde4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="----"
-            android:textSize="30sp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/AcordeName4"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/AcordeName4" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="70dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="60dp"
             android:background="@color/colorPrimary"
             android:text="Ascendente"
             android:textColor="#FFFFFF"
@@ -184,22 +87,20 @@
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="70dp"
+            android:layout_height="40dp"
             android:background="@color/colorPrimary"
             android:text="Descendente"
             android:textColor="#FFFFFF"
-            app:layout_constraintBottom_toTopOf="@+id/toolbar_acordes_menu"
+            app:layout_constraintBaseline_toBaselineOf="@+id/button"
             app:layout_constraintEnd_toStartOf="@+id/button3"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button"
-            app:layout_constraintTop_toBottomOf="@+id/AcordeName3" />
+            app:layout_constraintStart_toEndOf="@+id/button" />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginTop="70dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="60dp"
             android:background="@color/colorPrimary"
             android:text="Armonico"
             android:textColor="#FFFFFF"
